<resources>
    <string name="app_name">智能运营管理中心</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_user">请输入用户名</string>
    <string name="prompt_password">请输入密码</string>
    <string name="rember_password">记住账号</string>
    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>
    <string name="logined_member_username">logined_member_username</string>
    <string name="logined_member_password">logined_member_password</string>
    <string name="logined_member_ischeck">logined_member_ischeck</string>
    <string name="ip_address">ip_address</string>
    <string name="login_insertOrg">login_insertOrg</string>
    <string name="login_insertSite">login_insertSite</string>
    <string name="login_personId">login_personId</string>
    <string name="login_userName">login_userName</string>
    <string name="login_displayName">login_displayName</string>
    <string name="login_UserName">loginUserName</string>
    <string name="login_department">login_department</string>
    <string name="have_all_data_text">已加载出全部数据</string>
    <string name="login_error_empty_user">用户名不能为空</string>
    <string name="login_error_empty_passwd">密码不能为空</string>
    <string name="error_title">必填</string>
    <string name="error_obtain_once">无法获取ONCE</string>
    <string name="error_network_exception">网络通信异常，请稍后重试</string>
    <string name="error_network_disconnect">网络不可达,请开启Wifi或者移动数据网络</string>
    <string name="error_reply">提交失败</string>
    <string name="error_create_topic">无法创建新话题</string>
    <string name="error_login">无法登录</string>
    <string name="error_fav_nodes">收藏节点错误</string>
    <string name="error_fav_topic">收藏话题错误</string>
    <string name="error_get_profile">无法获取用户个人资料</string>
    <string name="error_unknown">未知错误</string>
    <string name="connect_setting_title">服务器连接设置</string>
    <string name="internet_setting">网络设置</string>
    <string name="update_adress">更新地址</string>
    <string name="connect_test">测试连接</string>
    <string name="connect_setting">连接设置</string>
    <string name="hint_set_fast_password">请绘制手势密码</string>
    <string name="login_successful_hint">登陆成功</string>
    <string name="get_data_info_fail">获取信息失败</string>
    <string name="have_not_data_txt">暂无相关数据</string>
    <string name="loading_data_fail">加载数据失败...</string>
    <string name="cclqbzd_text">仓储粮情标准单</string>
    <string name="login_please_login">尚未登录</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="exit">再按一次退出程序</string>
    <string name="loading">正在加载中...</string>
    <string name="item_num_title">编号:</string>
    <string name="item_desc_title">描述:</string>
    <string name="hint_item_num_title">暂无编号</string>
    <string name="hint_item_desc_title">暂无描述</string>
    <string name="hint_item_date_title">暂无日期</string>
    <string name="have_not_data">无</string>
    <string name="cclqbzd_text_text">仓储粮情标准单</string>
    <string name="jbxx_text">基本信息</string>
    <string name="lqjc_text">粮情检查</string>
    <string name="chjc_text">虫害检查</string>
    <string name="sbssjc_text">设备设施安全卫生检查</string>
    <string name="aqjc_text">作业现场检查</string>
    <string name="ccjcgz_text">仓储基础工作</string>
    <string name="grainsnun_text">标准单号:</string>
    <string name="description_text">描述:</string>
    <string name="loc_text">货位号:</string>
    <string name="storeman_text">保管员:</string>
    <string name="area_text">责任区:</string>
    <string name="reportby_text">创建人:</string>
    <string name="reportdate_text">创建时间:</string>
    <string name="weather_text">天气:</string>
    <string name="tem_text">温度:</string>
    <string name="yem3_text">粮温:</string>
    <string name="tem2_text">风向:</string>
    <string name="humidity_text">湿度:</string>
    <string name="date2_text">复核时间:</string>
    <string name="worktype_text">作业性质:</string>
    <string name="foodtype_text">粮食品种:</string>
    <string name="numberinthelibrary_text">粮食数量:</string>
    <string name="moisture_text">水分:</string>
    <string name="status_text">状态:</string>
    <string name="fryn_text">发热:</string>
    <string name="frarea_text">发热区域:</string>
    <string name="frplace_text">发热位置:</string>
    <string name="frdepth_text">发热状况:</string>
    <string name="frareai_text">发热面积:</string>
    <string name="frview_text">发热处理意见:</string>
    <string name="frjyts_text">发热处理天数:</string>
    <string name="jlyn_text">结露:</string>
    <string name="jlarea_text">结露区域:</string>
    <string name="jldepth_text">结露状况:</string>
    <string name="jlareai_text">结露面积:</string>
    <string name="jlview_text">结露处理意见:</string>
    <string name="jljyts_text">结露处理天数:</string>
    <string name="smyn_text">生霉:</string>
    <string name="smarea_text">生霉区域:</string>
    <string name="smplace_text">生霉位置:</string>
    <string name="smcd_text">生霉程度:</string>
    <string name="smview_text">生霉处理意见:</string>
    <string name="smjyts_text">生霉处理天数:</string>
    <string name="chyn_text">是否虫害?</string>
    <string name="charea_text">虫害区域:</string>
    <string name="chstatus_text">虫害状况:</string>
    <string name="smjbcl_text">虫害种类:</string>
    <string name="hcpz_text">害虫品种:</string>
    <string name="hcmd_text">害虫密度:</string>
    <string name="hcly_text">害虫来源:</string>
    <string name="chview_text">虫害处理意见:</string>
    <string name="chjyts_text">虫害处理天数:</string>
    <string name="hxyjmc_text">药剂名称:</string>
    <string name="smyp_text">药品名称:</string>
    <string name="hxjl_text">剂量:</string>
    <string name="hxtyd_text">投药点:</string>
    <string name="fld1_text">处理结果:</string>
    <string name="drugsum_text">药剂用量:</string>
    <string name="mos1_text">虫害来源:</string>
    <string name="mos2_text">处理时间:</string>
    <string name="mos3_text">药剂浓度:</string>
    <string name="foodsize_text">粮堆体积:</string>
    <string name="spacesize_text">空间体积:</string>
    <string name="mos5_text">合计体积:</string>
    <string name="medtype_text">施药方法:</string>
    <string name="medpeoples_text">施药人数:</string>
    <string name="closetype_text">密闭方法:</string>
    <string name="mos8_text">熏蒸开始日期:</string>
    <string name="mos9_text">熏蒸结束日期:</string>
    <string name="foodmed_text">粮堆用药量:</string>
    <string name="spacemed_text">空间用药量:</string>
    <string name="mos10_text">密闭时间:</string>
    <string name="foodtem_text">熏蒸前粮温:</string>
    <string name="foodtem1_text">熏蒸后粮温:</string>
    <string name="mos11_text">熏蒸前发芽率:</string>
    <string name="mos12_text">熏蒸后发芽率:</string>
    <string name="mos13_text">熏蒸前害虫密度:</string>
    <string name="mos14_text">熏蒸后害虫密度:</string>
    <string name="mos15_text">药剂残留率:</string>
    <string name="xzyn_text">曾否熏蒸:</string>
    <string name="shjc_text">鼠害检查</string>
    <string name="shyn_text">鼠害:</string>
    <string name="shzl1_text">鼠害种类:</string>
    <string name="sharea_text">鼠害区域:</string>
    <string name="shmd_text">鼠害密度:</string>
    <string name="shview_text">鼠害处理意见:</string>
    <string name="shjyts_text">鼠害处理天数:</string>
    <string name="shwlfz_text">治理措施(物理):</string>
    <string name="shjyfz_text">防治方法:</string>
    <string name="mousetype_text">鼠类:</string>
    <string name="bait_text">诱饵:</string>
    <string name="shhxcs_text">盗食点数:</string>
    <string name="shhxcs__text">投药点数:</string>
    <string name="dose_text">药剂计量:</string>
    <string name="density_text">鼠密度:</string>
    <string name="smjl_text">药剂用量:</string>
    <string name="ch_text">虫害:</string>
    <string name="setplace_text">投药点:</string>
    <string name="robpercent_text">盗食率(%):</string>
    <string name="deathpercent_text">死鼠率(%):</string>
    <string name="after_text">灭鼠后密度:</string>
    <string name="cfxn_text">仓房性能:</string>
    <string name="cfview_text">仓房处理意见:</string>
    <string name="myn_text">门损害:</string>
    <string name="mycwz_text">门异常位置:</string>
    <string name="cycwz_text">窗异常位置:</string>
    <string name="zlview_text">轴流风机处理意见:</string>
    <string name="jwxyn_text">检温线异常:</string>
    <string name="jwxview_text">检温线处理意见:</string>
    <string name="spjkyn_text">监控异常:</string>
    <string name="spjkview_text">视频监控处理意见:</string>
    <string name="lightview_text">照明异常处理意见:</string>
    <string name="othersyn_text">其他问题:</string>
    <string name="othersview_text">其他异常处理意见:</string>
    <string name="pdxview_text">配电箱异常处理意见:</string>
    <string name="xfxyn_text">消防箱是否异常?</string>
    <string name="xfxview_text">消防箱异常处理意见:</string>
    <string name="samplenum_text">样品编号:</string>
    <string name="type_text">扦样类型:</string>
    <string name="sampnum_text">送检编号:</string>
    <string name="n_qctasklinenum_text">检验任务编号:</string>
    <string name="obj_text">扦样对象:</string>
    <string name="cartasknum_text">车辆作业单号:</string>
    <string name="trainyn_text">是否火车?</string>
    <string name="carno_text">车号:</string>
    <string name="fromloc_text">取样位置:</string>
    <string name="enterby_text">取样人:</string>
    <string name="enterdate_text">取样日期:</string>
    <string name="qyd_text">扦样单</string>
    <string name="qiangyang_type_text">获取选项值</string>
    <string name="add_text">新建</string>
    <string name="tagid_text">一卡通号:</string>
    <string name="scan_text">请将二维码/条码放入框内</string>
    <string name="scanning_text">二维码/条码扫描</string>
    <string name="intro_message">请将磁卡放到手机背面的NFC感应区</string>
    <string name="error">Error</string>
    <string name="no_nfc">No NFC found on this device</string>
    <string name="nfc_disabled">NFC is not enabled. Please go to the wireless settings to enable it.</string>
    <string name="menu_main_clear_title">Clear all</string>
    <string name="nfc_text">NFC感应</string>
    <string name="tongcang_text">筒仓</string>
    <string name="mhqyn_text">灭火器:</string>
    <string name="mhqview_text">问题描述:</string>
    <string name="xfsyn_text">消防栓:</string>
    <string name="pdxyn_text">配电箱:</string>
    <string name="gbjyn_text">刮板机:</string>
    <string name="zlfjyn_text">轴流风机:</string>
    <string name="dtyn_text">电梯:</string>
    <string name="lightyn_text">照明:</string>
    <string name="cyn_text">窗户:</string>
    <string name="xcwsyn_text">现场卫生:</string>
    <string name="cnwsyn_text">仓内卫生:</string>
    <string name="tlwsyn_text">通廊卫生:</string>
    <string name="dkwsyn_text">地坑卫生:</string>
    <string name="cflyyn_text">仓房漏雨:</string>
    <string name="dgfjyn_text">单管风机:</string>
    <string name="lxfjyn_text">离心风机:</string>
    <string name="ztjgbc_text">站台及钢板仓</string>
    <string name="content_text">作业内容:</string>
    <string name="from_text">开始时间:</string>
    <string name="to_text">结束时间:</string>
    <string name="ps1_text">电源:</string>
    <string name="cm1_text">输送机械:</string>
    <string name="qc1_text">清杂机:</string>
    <string name="dr1_text">除尘设备:</string>
    <string name="sfm1_text">灌包机:</string>
    <string name="awp1_text">登高作业平台:</string>
    <string name="bc1_text">电瓶车:</string>
    <string name="fk1_text">叉车:</string>
    <string name="sr1_text">安全绳:</string>
    <string name="dm1_text">防尘口罩:</string>
    <string name="xxz_text">选项值</string>
    <string name="new_loc_text">新货位号:</string>
    <string name="name_text">名称:</string>
    <string name="oldloc_text">原货位号:</string>
    <string name="storepottype_text">仓型:</string>
    <string name="hyyb_text">货运预报</string>
    <string name="hyyb_carnum">单号:</string>
    <string name="hyyb_plannum">仓储作业计划编号:</string>
    <string name="person_details">基本信息</string>
    <string name="work_history">用工记录</string>
    <string name="attence_history">考勤记录</string>
    <string name="workorder_sb">设备:</string>
    <string name="sum_text">数量:</string>
    <string name="ordernum_text">序号</string>
    <string name="through_text">经由</string>
    <string name="line_text">线别</string>
    <string name="wagonsg_text">挂</string>
    <string name="wagonsz_text">摘</string>
    <string name="memo_text">记事</string>
</resources>