<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:layout_marginBottom="2dp"
    android:layout_marginTop="2dp"
    android:orientation="horizontal"
    card_view:cardCornerRadius="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"
            android:padding="5dp">

            <TextView
                android:id="@+id/new_loc_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_loc_text"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/loc_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/new_loc_title"
                android:hint="@string/hint_item_num_title"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/name_title_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/new_loc_title"
                android:layout_marginTop="5dp"
                android:text="@string/name_text"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/name_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loc_text_id"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/name_title_id"
                android:ellipsize="end"
                android:ems="14"
                android:hint="@string/hint_item_desc_title"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/oldloc_title_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name_title_id"
                android:layout_marginTop="5dp"
                android:text="@string/oldloc_text"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/oldloc_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name_text_id"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/oldloc_title_id"
                android:ellipsize="end"
                android:ems="14"
                android:hint="@string/hint_item_desc_title"
                android:textColor="@color/black"
                android:textSize="16sp" />


        </RelativeLayout>


    </RelativeLayout>

</android.support.v7.widget.CardView>