<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/shape_corner_workorder_item"
    android:foreground="?android:selectableItemBackground"
    android:orientation="horizontal"
    card_view:cardCornerRadius="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"
            android:padding="5dp">

            <TextView
                android:id="@+id/workorder_sb_title"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/workorder_sb"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_16sp" />

            <TextView
                android:id="@+id/itemnum_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/workorder_sb_title"
                android:hint="@string/hint_item_num_title"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_16sp" />


            <TextView
                android:id="@+id/item_desc_title"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/workorder_sb_title"
                android:layout_marginTop="5dp"
                android:text="@string/sum_text"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_16sp" />

            <TextView
                android:id="@+id/sum_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/itemnum_text_id"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/item_desc_title"
                android:ellipsize="end"
                android:ems="14"
                android:hint="@string/hint_item_desc_title"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_16sp" />

        </RelativeLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>