<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/windows_color"
            android:padding="@dimen/dimen_5"
            android:text="@string/lqjc_text"
            android:textSize="@dimen/dimens_16sp" />

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen_5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fryn_text"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />

                <TextView
                    android:id="@+id/fryn_text_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_right"
                    android:gravity="right"
                    android:hint="@string/have_not_data"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_line"
                android:layout_below="@+id/num_linearlayout_id"
                android:background="@drawable/line"></View>

            <include layout="@layout/activity_sffr_details"></include>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/jlyn_text"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />

                <TextView
                    android:id="@+id/jlyn_text_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_right"
                    android:gravity="right"
                    android:hint="@string/have_not_data"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_line"
                android:background="@drawable/line"></View>

            <include layout="@layout/activity_sfjl_details"></include>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/smyn_text"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />

                <TextView
                    android:id="@+id/smyn_text_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_right"
                    android:gravity="right"
                    android:hint="@string/have_not_data"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_line"
                android:background="@drawable/line"></View>

            <include layout="@layout/activity_sfsm_details"></include>
        </LinearLayout>


    </LinearLayout>


</ScrollView>
